recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:14: error: reassignment to val
  else if (gauche = true){
                  ^Tree:15: error: Boolean does not take parameters
    gauche(angle); //viser gauche 
          ^Tree:18: error: not enough arguments for method subTree: (steps: Int, length: Double, angle: Double, shrink: Double, gauche: Boolean)Unit.
Unspecified value parameter gauche.
    subTree(steps-1, length*shrink, angle, shrink); //faire le sous arbre
           ^